haskell/katari-compiler/test/golden/expected/04-handle-block.diagnostics.txt
error[K0220]: type contradiction at ReasonKindRequestHandlerNever: expected `never`, found `42`
  --> test/golden/cases/04-handle-block.ktr (7:5)
  |
7 |     request fetch_answer() { 42 }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
